<resources>
    <string name="app_name">NaturaLife</string>
    <string name="registro_de_medicamentos">REGISTRO DE MEDICAMENTOS</string>
    <string name="title_activity_mnatural">MNaturalActivity</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripcion</string>
    <string name="formula">Formula</string>
    <string name="precio">Precio</string>
    <string name="sabor">Sabor</string>
    <string name="recomendacion">Recomendacion</string>
    <string name="semaforo_nutricional">SEMAFORO NUTRICIONAL</string>
    <string name="grasa">Grasa:</string>
    <string name="azucar">Azucar:</string>
    <string name="sal">Sal:</string>
    <string name="imagen_del_medicamento">imagen del medicamento</string>
    <string name="ingresecantidad">Seleccione la cantidad</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <array name="semaforo">
        <item>nada</item>
        <item>bajo</item>
        <item>medio</item>
        <item>alto</item>
    </array>
    <string name="title_mnaturalcatalog_list">Medicamentos</string>
    <string name="title_mnaturalcatalog_detail">MNaturalCatalog Detail</string>
    <string name="catalogo">Catalogo</string>
    <string name="addcarrito">addcarrito</string>
    <string name="foto">foto</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="sumarcantidad">sumarcantidad</string>
    <string name="restarcantidad">restarcantidad</string>
    <string name="total">Total</string>
    <string name="_1">1</string>
    <string name="url">Url</string>
    <string name="christopher_espinoza">Christopher Espinoza</string>
</resources>
