<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MNaturalCatalogActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:collapseIcon="@mipmap/ic_launcher"
            app:title="@string/app_name">

            <TextView
                android:id="@+id/tvusario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:text="@string/christopher_espinoza" />

            <ImageButton
                android:id="@+id/btncatalogo"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="200dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/catalogo"
                android:onClick="onClickcarrito"
                android:src="@drawable/ic_stat_carrito" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_catalog" />

</android.support.constraint.ConstraintLayout>