<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MNaturalActivity"
    tools:showIn="@layout/activity_mnatural">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="824dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="65dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvtitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/registro_de_medicamentos"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.011" />

            <ImageView
                android:id="@+id/imagen"
                android:layout_width="163dp"
                android:layout_height="167dp"
                android:layout_gravity="center"
                android:contentDescription="@string/imagen_del_medicamento"
                android:src="@mipmap/ic_launcher" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilnombre"
                android:layout_width="388dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.04"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.091">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietnombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tildescripcion"
                android:layout_width="402dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.043"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.209">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietdescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descripcion" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilformula"
                android:layout_width="455dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.062"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.32999998">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietformula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/formula" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilprecio"
                android:layout_width="429dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.051"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.45">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietprecio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/precio"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilsabor"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.023"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.567">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietsabor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sabor" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilrecomendacion"
                android:layout_width="489dp"
                android:layout_height="55dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.084"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.677">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietrecomendacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/recomendacion" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvsemaforo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/semaforo_nutricional"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.527"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.758" />

            <TextView
                android:id="@+id/tvgrasa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grasa"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spgrasa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/semaforo" />

            <TextView
                android:id="@+id/tvazucar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/azucar"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spazucar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/semaforo" />

            <TextView
                android:id="@+id/tvsal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sal"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spsal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/semaforo" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>